--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
-    <!-- CSS Dédié -->
+    <!-- CSS Dédié (Lien ajouté) -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
